views/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap');

:root{
    --accent-color: #81A1C1;
    --background-color: #2E3440;
    --foreground-color: #434C5E;
    --light-background: #4C566A;
    --error-color: #BF616A;
    --text-color: #ECEFF4;

    /* Font */
    --font-family: 'Fira Code', monospace;
    --font-size: 14px;

    /* Transition */
    --transition: .2s linear all;

    /* Root settings */
    font-family: var(--font-family);
}
/* Utilities */
.hidden{
    display: none !important;
    opacity:0 !important;
}
.mt{
    margin-top: 30px;
}
.blurred{
    filter: blur(5px);
    pointer-events: none;
}

/* Tags */
body{
    font-family:var(--font-family);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: var(--background-color);
    color: #fff;
    padding: 0;
    margin: 0;
    font-size: var(--font-size);    
}
img{
    max-width: 100%;
}
h2{
    text-align: center;
    font-weight: 300;
}
i{
    font-size: 20px;
}
ul{
    list-style-type: none;
    display: flex;
    justify-content: space-around;
    margin: 0;
    padding: 0;
}
ul li{
    margin: 0 10px;
}
a{
    color: var(--accent-color);
    text-decoration: none;
    font-family: var(--font-family);
}
a:hover{
    text-decoration: underline;
}
li:hover a{
    text-decoration: underline var(--accent-color) solid; 
}
table{
    width:100%;
    border: var(--accent-color) 1px solid;
    -webkit-box-shadow: 10px 10px 15px 3px rgba(0,0,0,0.15);
    -moz-box-shadow: 10px 10px 15px 3px rgba(0,0,0,0.15);
    box-shadow: 10px 10px 15px 3px rgba(0,0,0,0.15);
}
thead tr {
    background-color: var(--accent-color);
    color: #000;
    text-align: left;
}
th,td {
    padding: 6px 8px;
}
tbody tr {
    background-color: var(--foreground-color);
    border-bottom: 1px solid var(--accent-color);
}

body tr:nth-of-type(even) {
    background-color: var(--light-background);
}

tbody tr:last-of-type {
    border-bottom: 2px solid var(--accent-color);
}

table tbody tr.active-row {
    font-weight: bold;
    color: var(--accent-color);
}
.table-wrapper{
    width: 70%;
    padding: 2px;
    display: flex;
    overflow: auto;
}
@media screen and (max-width: 1560px) {
    .table-wrapper{
        width: 90%;
    }
}
@media screen and (max-width: 1350px) {
    th,td {
        padding: 2px 5px;
    }
}
@media screen and (max-width: 1050px) {
    th,td {
        font-size: 12px;
    }  
    .table-wrapper{
        width: 95%;
    }
}
@media screen and (min-width: 700px){
    .table-wrapper{
        justify-content: center;
        align-items: center;
    }
}
@media screen and (max-width: 700px) {
    body{
        margin: 0;
        padding: 0;
    }
    table {
        width: 100%;
        font-size: 11px;
    }
    .table-wrapper{
        width:99%;
    }
    th,td{
        padding: 2px;
    }
}

/* SCROLLBAR */
::-webkit-scrollbar {
    width: 20px;
}
  
/* Track */
::-webkit-scrollbar-track {
    background: transparent;
}

/* Thumb */
::-webkit-scrollbar-thumb {
    background: var(--foreground-color);
    border-radius: 20px;
    border: 6px solid transparent;
    background-clip: content-box;
}
::-webkit-scrollbar-thumb:hover{
    background-color: var(--light-background);
}

/* HOME PAGE */

.wrapper{
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    transition: var(--transition);
}
form{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    border-radius: 10px;
    background-color: var(--foreground-color);
    padding:  0 0 30px 0;
    -webkit-box-shadow: 10px 10px 15px 3px rgba(0,0,0,0.1);
    -moz-box-shadow: 10px 10px 15px 3px rgba(0,0,0,0.1);
    box-shadow: 10px 10px 15px 3px rgba(0,0,0,0.1);

    transition: var(--transition);
}
/* MEDIA QUERIES FOR FORM */
@media screen and (min-width: 1500px) {
    form{
        width: 25vw;
    }
}
@media screen and (max-width: 1500px) and (min-width: 1000px) {
    form{
        width: 40vw;
    }
}
@media screen and (max-width: 1000px) and (min-width:650px) {
    form{
        width: 50vw;
    }
}
@media screen and (max-width: 650px) and (min-width:400px){
    form{
        width: 80vw;
    }  
}
@media screen and (max-width: 400px){
    form{
        width: 95vw;
    }  
}
.banner{
    overflow: hidden;
    height: 50px;
    border-radius: 10px 10px 0 0;
}
.inputs-wrapper{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 0 20px;
    text-align: center;
}

/* INPUTS */
input{
    font-family: var(--font-family) !important;
}
.inputs-wrapper label{
    width: 100%;
}
input[type='text']{
    min-width:100%;
    height: 30px;
    border: none;
    color: var(--text-color);
    background: none;
    border-bottom: 1px solid var(--accent-color);
    transition:  var(--transition);
    font-family: var(--font-family);
    text-align: center;
}
input[type='text']:focus,
input[type='text']:hover{
    outline: none;
    background: var(--light-background);
}
/* Getting rid of autocompletion changing colors of input */
input:-webkit-autofill,
input:-webkit-autofill:focus {
    transition: background-color 600000s 0s, color 600000s 0s;
}
input[data-autocompleted] {
    background-color: transparent !important;
}
input[type="radio"] {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    display: inline-block;
    width: 15px;
    height: 15px;  
    padding: 3px;
    background-clip: content-box;
    border: 2px solid var(--light-background);
    background: var(--foreground-color);
    border-radius: 50%;
    margin-right: 10px;
    transition: var(--transition);
    margin-bottom: 5px;
}
input[type="radio"]:checked {
    background-color: var(--accent-color);
}
input[type='submit']{
    min-width:300px;
    border: 1px solid var(--accent-color);
    background: none;
    padding: 10px;
    border-radius: 30px;
    transition:  var(--transition);
    color: var(--accent-color);
    margin-top: 20px;
}
input[type='submit']:hover{
    background: var(--accent-color);
    color: var(--text-color);
}
select{
    border: none;
    border-bottom: 1px solid var(--accent-color);
    background: none;
    padding: 10px 20px;
    color: var(--text-color);
    margin-top: 5px;
}
select:focus,
select:hover
{
    background-color: var(--light-background);
    outline:none;
}
select > option{
    background: var(--light-background);
    transition:var(--transition);
    display: block;
}
#cl-container{
    transition: var(--transition);
    overflow: hidden;
}
#el-container{
    transition: var(--transition);
    overflow: hidden;
}

input[type='time']{
    min-width:150px;
    height: 30px;
    border: none;
    color: var(--text-color);
    background: none;
    border-bottom: 1px solid var(--accent-color);
    padding: 3px 10px;
    margin: 10px 0;
    transition:  var(--transition);
    font-family: var(--font-family);
}
input[type='time']:focus,
input[type='time']:hover{
    outline: none;
    background: var(--light-background);
}
input[type="time"]::-webkit-calendar-picker-indicator {
    filter: invert(1);
}
.go-back-btn,
.current-lesson-btn{
    color: white;
    text-decoration: none;
    display: block;
    margin-top: 30px;
    background: none;
    border: 1px solid var(--accent-color);
    padding: 10px 30px;
    transition:  var(--transition);
    border-radius: 30px;
}
.go-back-btn:hover,
.go-back-btn:focus,
.current-lesson-btn:hover,
.current-lesson-btn:focus{
    background: var(--accent-color);
    outline: none;
    color: black;
}

/* ERROR BOX */

.error{
    background-color: var(--error-color);
    width: 100%;
    text-align: center;
    padding: 10px 0;
}

/* SETTINGS PAGE */

.settings-btn{
    position: absolute;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background: var(--accent-color);
    display: flex;
    justify-content: center;
    align-items: center;
    right: 30px;
    bottom: 30px;
    transition: var(--transition);
    color: var(--text-color);
}
.settings-btn:hover{
    color: var(--accent-color);
    background: var(--text-color);
    transform: scale(1.1);
}
.settings{
    position: absolute;
    background-color: var(--foreground-color);
    width: 300px;
    padding: 10px;
    -webkit-box-shadow: 8px 8px 24px 0px rgb(49, 49, 49);
    -moz-box-shadow: 8px 8px 24px 0px rgb(49, 49, 49);
    box-shadow: 8px 8px 24px 0px rgb(49, 49, 49);
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    transition: var(--transition);
}
.settings input[type='checkbox']{
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    border-radius: 2px;
    width: 20px;
    height:20px;
    background-color: var(--light-background);
    display: inline-block;
}
.settings label p{
    display: inline-block;
    margin:0;
    font-size: 16px;
}
.settings input[type='checkbox']:checked:after {
    content: '';
    display: block;
    width: 14px;
    height:14px;
	position: relative;
	top: 3px;
	left: 3px;
    border-radius: 2px;
	background-color: var(--accent-color);
}
.settings-submit{
    margin-top: 20px;
    background: none;
    border: 1px solid var(--accent-color);
    padding: 10px 30px;
    transition:  var(--transition);
    border-radius: 30px;
    color: var(--accent-color);
    transition: var(--transition);
    text-align: center;
}
.settings-submit:hover{
    background: var(--accent-color);
    color: var(--text-color);
}
.mw-explanation{
    background-color: var(--background-color);
    border-radius: 5px;
    overflow: hidden;
    margin-top: 10px;
}
.mw-explanation p{
    padding: 0 14px;
}

